--- a/official/myCite.html
+++ b/official/myCite.html
@@ -9,8 +9,8 @@
       <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
       <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet">
       <link href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans+Condensed:300" rel="stylesheet">
-      <link rel="stylesheet" href="/offical/skillssheet.css">
-      <link rel = "stylesheet" href= "/offical/cssMycite.css">
+      <link rel="stylesheet" href="/official/skillssheet.css">
+      <link rel = "stylesheet" href= "/official/cssMycite.css">
       <title>Simon Tekeste</title>
   </head>
   <body>
@@ -32,9 +32,9 @@
                 </div>
                 <div class ="nav">
                   <div class="row">
-                  <a href="/offical/travel.html">Travels</a>
-                  <a href="/offical/project.html">Relevance</a>
-<!--                  <a href="/offical/contact.html">Contact</a>-->
+                  <a href="/official/travel.html">Travels</a>
+                  <a href="/official/project.html">Relevance</a>
+<!--                  <a href="/official/contact.html">Contact</a>-->
                     </div>
                 </div>
             </header>
