back to the old

--- a/offical/project.html
+++ b/offical/project.html
@@ -27,9 +27,9 @@
                     </div>
                      <div class="nav">
                          <div class="row">
-                              <a href="/official/myCite.html">Home</a>
-                              <a href="/official/travel.html">Travel</a>
-<!--                              <a href="/official/contact.html">Contact</a>-->
+                              <a href="/offical/myCite.html">Home</a>
+                              <a href="/offical/travel.html">Travel</a>
+<!--                              <a href="/offical/contact.html">Contact</a>-->
                         </div>
                 </div>
             </header>
