--- a/offical/travel.html
+++ b/offical/travel.html
@@ -4,8 +4,8 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-        <link rel="stylesheet" href="/official/cssMycite.css">
-         <link rel="stylesheet" href="/official/travels.css">
+        <link rel="stylesheet" href="/offical/cssMycite.css">
+         <link rel="stylesheet" href="/offical/travels.css">
         <title>World's Connected</title>
     </head>
     <body>
@@ -27,9 +27,9 @@
                     </div>
                      <div class="nav">
                          <div class="row">
-                              <a href="/official/myCite.html">Home</a>
-                              <a href="/official/project.html">Relevance</a>
-<!--                              <a href="official/contact.html">Contact</a>-->
+                              <a href="/offical/myCite.html">Home</a>
+                              <a href="/offical/project.html">Relevance</a>
+<!--                              <a href="offical/contact.html">Contact</a>-->
                         </div>
                 </div>
             </header>
