fixed styling, added dic, relative paths

--- a/project.html
+++ b/project.html
@@ -4,31 +4,33 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-        <link rel="stylesheet" href="cssMycite.css">
-        <link rel="stylesheet" href="project.css">
+       
+        <link rel="stylesheet" href="styling/cssMycite.css">
+        <link rel="stylesheet" href="styling/project.css">
+
         <title>Projects</title>
     </head>
     <body>
         <div class = "container">
             <header>
                  <div class = "row">
-                     <img src = "/pictures/simon.jpg" style="border-radius:50%; height:150px;width:150px">
+                     <img src = "pictures/simon.jpg" style="border-radius:50%; height:150px;width:150px">
                       <div class="col">
                           <h1>Simon Tekeste</h1>
                           <br/>
                           <h3>Bay Area, California</h3></div>
                           <div class="link">
-                              <a href="https://www.linkedin.com/feed/"><img src = "/pictures/linkedin.png" style="width:50px;height:50px" title = "Linkedin"></a>
-                              <a href="mailto:simonsaysfollow@gmail.com"><img src = "/pictures/Unknown.png" style="width:50px;height:50px;" onclick="displayEmail()"></a>
+                              <a href="https://www.linkedin.com/feed/"><img src = "pictures/linkedin.png" style="width:50px;height:50px" title = "Linkedin"></a>
+                              <a href="mailto:simonsaysfollow@gmail.com"><img src = "pictures/Unknown.png" style="width:50px;height:50px;" onclick="displayEmail()"></a>
                               <br/>
-                               <a href="https://github.com/simonsaysfollow"><img src = "/pictures/githubImage.png" style="width:50px;height:50px;margin-top:-30px" title = "Github"></a> 
-                              <input type="image" src="/pictures/Contact.png" style="height:50px;width:50px;" onclick = "displayNumber()"/>
+                               <a href="https://github.com/simonsaysfollow"><img src = "pictures/githubImage.png" style="width:50px;height:50px;margin-top:-30px" title = "Github"></a> 
+                              <input type="image" src="pictures/Contact.png" style="height:50px;width:50px;" onclick = "displayNumber()"/>
                         </div>
                     </div>
                      <div class="nav">
                          <div class="row">
-                              <a href="/offical/myCite.html">Home</a>
-                              <a href="/offical/travel.html">Travel</a>
+                              <a href="myCite.html">Home</a>
+                              <a href="travel.html">Travel</a>
 <!--                              <a href="/offical/contact.html">Contact</a>-->
                         </div>
                 </div>
