--- a/contact.html
+++ b/contact.html
@@ -12,24 +12,24 @@
         <div class = "container">
             <header>
                  <div class = "row">
-                     <img src = "/pictures/simon.jpg" style="border-radius:50%; height:150px;width:150px">
+                     <img src = "pictures/simon.jpg" style="border-radius:50%; height:150px;width:150px">
                       <div class="col">
                           <h1>Simon Tekeste</h1>
                           <br/>
                           <h3>Bay Area, California</h3></div>
                           <div class="link">
-                              <a href="https://www.linkedin.com/feed/"><img src = "/pictures/linkedin.png" style="width:50px;height:50px" title = "Linkedin"></a>
-                              <a href="mailto:simonsaysfollow@gmail.com"><img src = "/pictures/Unknown.png" style="width:50px;height:50px;" onclick="displayEmail()"></a>
+                              <a href="https://www.linkedin.com/feed/"><img src = "pictures/linkedin.png" style="width:50px;height:50px" title = "Linkedin"></a>
+                              <a href="mailto:simonsaysfollow@gmail.com"><img src = "pictures/Unknown.png" style="width:50px;height:50px;" onclick="displayEmail()"></a>
                               <br/>
-                               <a href="https://github.com/simonsaysfollow"><img src = "/pictures/githubImage.png" style="width:50px;height:50px;margin-top:-30px" title = "Github"></a> 
-                              <input type="image" src="/pictures/Contact.png" style="height:50px;width:50px;" onclick = "displayNumber()"/>
+                               <a href="https://github.com/simonsaysfollow"><img src = "pictures/githubImage.png" style="width:50px;height:50px;margin-top:-30px" title = "Github"></a> 
+                              <input type="image" src="pictures/Contact.png" style="height:50px;width:50px;" onclick = "displayNumber()"/>
                         </div>
                     </div>
                      <div class="nav">
                          <div class="row">
-                              <a href="/offical/myCite.html">Home</a>
-                              <a href="/offical/travel.html">Travel</a>
-                              <a href="/offical/project.html">Projects</a>
+                              <a href="myCite.html">Home</a>
+                              <a href="travel.html">Travel</a>
+                              <a href="project.html">Projects</a>
                         </div>
                     </div>
             </header>
