--- a/myCite.html
+++ b/myCite.html
@@ -7,40 +7,36 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
       <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+      
       <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet">
       <link href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans+Condensed:300" rel="stylesheet">
 
-      <link rel="stylesheet" href="/simonOnline/official/skillssheet.css">
-      <link rel = "stylesheet" href= "/simonOnline/official/cssMycite.css">
-      <link rel="stylesheet" href="/offical/skillssheet.css">
-      <link rel = "stylesheet" href= "/offical/cssMycite.css">
-
-
-      <link rel="stylesheet" href="/official/skillssheet.css">
-      <link rel = "stylesheet" href= "/official/cssMycite.css">
+      <link rel="stylesheet" href="styling/skillssheet.css">
+      <link rel = "stylesheet" href= "styling/cssMycite.css">
+      
       <title>Simon Tekeste</title>
   </head>
   <body>
       <div class = "container">
           <header>
               <div class = "row">
-                  <img src = "/pictures/simon.jpg" style="border-radius:50%; height:150px;width:150px">
+                  <img src="pictures/simon.jpg" style="border-radius:50%; height:150px;width:150px">
                   <div class="col">
                       <h1>Simon Tekeste</h1>
                       <br/>
                       <h3>Bay Area, California</h3></div>
                       <div class="link">
-                          <a href="https://www.linkedin.com/feed/"><img src = "/pictures/linkedin.png" style="width:50px;height:50px" title = "Linkedin"></a>
-                          <a href="mailto:simonsaysfollow@gmail.com"><img src = "/pictures/Unknown.png" style="width:50px;height:50px;" onclick="displayEmail()"></a>
+                          <a href="https://www.linkedin.com/feed/"><img src = "pictures/linkedin.png" style="width:50px;height:50px" title = "Linkedin"></a>
+                          <a href="mailto:simonsaysfollow@gmail.com"><img src = "pictures/Unknown.png" style="width:50px;height:50px;" onclick="displayEmail()"></a>
                           <br/>
-                           <a href="https://github.com/simonsaysfollow"><img src = "/pictures/githubImage.png" style="width:50px;height:50px;margin-top:-30px" title = "Github"></a> 
-                          <input type="image" src="/pictures/Contact.png" style="height:50px;width:50px;" onclick = "displayNumber()"/>
+                           <a href="https://github.com/simonsaysfollow"><img src = "pictures/githubImage.png" style="width:50px;height:50px;margin-top:-30px" title = "Github"></a> 
+                          <input type="image" src="pictures/Contact.png" style="height:50px;width:50px;" onclick = "displayNumber()"/>
                       </div>
                 </div>
                 <div class ="nav">
                   <div class="row">
-                  <a href="/offical/travel.html">Travels</a>
-                  <a href="/offical/project.html">Relevance</a>
+                  <a href="travel.html">Travels</a>
+                  <a href="project.html">Relevance</a>
 <!--                  <a href="/offical/contact.html">Contact</a>-->
                     </div>
                 </div>
@@ -55,10 +51,10 @@
             <h3><u>Education</u></h3>
               <div class = "row">
                 <ul>
-                <li><p><img src="/pictures/ucsb.png" width="35px"> <b>University of California, Santa Barbara (2016)</b></p></li>
-                 <li><p><img src="/pictures/bcc.png" width="25px"> <b>Berkeley City College (2014)</b></p></li> 
-                  <li><p><img  src="/pictures/lan.jpg" width="25px"> <b>Laney City College</b></p></li>
-                  <li><p><img  src="/pictures/logo_bird_1_small.png" width="25px"> <b>KickStart Coding</b></p></li>
+                <li><p><img src="pictures/ucsb.png" width="35px"> <b>University of California, Santa Barbara (2016)</b></p></li>
+                 <li><p><img src="pictures/bcc.png" width="25px"> <b>Berkeley City College (2014)</b></p></li> 
+                  <li><p><img  src="pictures/lan.jpg" width="25px"> <b>Laney City College</b></p></li>
+                  <li><p><img  src="pictures/logo_bird_1_small.png" width="25px"> <b>KickStart Coding</b></p></li>
                   </ul>
               </div>
           </div>
