--- a/travel.html
+++ b/travel.html
@@ -4,31 +4,31 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-        <link rel="stylesheet" href="/offical/cssMycite.css">
-         <link rel="stylesheet" href="/offical/travels.css">
+        <link rel="stylesheet" href="styling/cssMycite.css">
+         <link rel="stylesheet" href="styling/travels.css">
         <title>World's Connected</title>
     </head>
     <body>
          <div class = "container">
             <header>
                  <div class = "row">
-                     <img src = "/pictures/simon.jpg" style="border-radius:50%; height:150px;width:150px">
+                     <img src = "pictures/simon.jpg" style="border-radius:50%; height:150px;width:150px">
                       <div class="col">
                           <h1>Simon Tekeste</h1>
                           <br/>
                           <h3>Bay Area, California</h3></div>
                           <div class="link">
-                              <a href="https://www.linkedin.com/feed/"><img src = "/pictures/linkedin.png" style="width:50px;height:50px" title = "Linkedin"></a>
-                              <a href="mailto:simonsaysfollow@gmail.com"><img src = "/pictures/Unknown.png" style="width:50px;height:50px;" onclick="displayEmail()"></a>
+                              <a href="https://www.linkedin.com/feed/"><img src = "pictures/linkedin.png" style="width:50px;height:50px" title = "Linkedin"></a>
+                              <a href="mailto:simonsaysfollow@gmail.com"><img src = "pictures/Unknown.png" style="width:50px;height:50px;" onclick="displayEmail()"></a>
                               <br/>
-                               <a href="https://github.com/simonsaysfollow"><img src = "/pictures/githubImage.png" style="width:50px;height:50px;margin-top:-30px" title = "Github"></a> 
+                               <a href="https://github.com/simonsaysfollow"><img src = "pictures/githubImage.png" style="width:50px;height:50px;margin-top:-30px" title = "Github"></a> 
                               <input type="image" src="/pictures/Contact.png" style="height:50px;width:50px;" onclick = "displayNumber()"/>
                         </div>
                     </div>
                      <div class="nav">
                          <div class="row">
-                              <a href="/offical/myCite.html">Home</a>
-                              <a href="/offical/project.html">Relevance</a>
+                              <a href="myCite.html">Home</a>
+                              <a href="project.html">Relevance</a>
 <!--                              <a href="offical/contact.html">Contact</a>-->
                         </div>
                 </div>
@@ -43,7 +43,7 @@
                      </div>
                      <div class="row">
                      <div class="col-10">
-                        <img class ="img-fluid" src="/pictures/mexico.jpg" title="Mexico - Spontaneous Trip(2018)">
+                        <img class ="img-fluid" src="pictures/mexico.jpg" title="Mexico - Spontaneous Trip(2018)">
                     </div> 
                  </div>
             </div>
@@ -54,7 +54,7 @@
                  </div>
                  <div class="row">
                     <div class="col-10">
-                    <img class ="img-fluid" src="/pictures/prague.jpg" title="Prague - Escape Room(2016)">
+                    <img class ="img-fluid" src="pictures/prague.jpg" title="Prague - Escape Room(2016)">
                 </div> 
              </div>
             </div>
@@ -65,7 +65,7 @@
                  </div>
                  <div class="row">
                     <div class="col-10">
-                    <img class ="img-fluid" src="/pictures/cuba.JPG" title="Cuba - Old School(2018)">
+                    <img class ="img-fluid" src="pictures/cuba.JPG" title="Cuba - Old School(2018)">
                 </div> 
              </div>
             </div>
@@ -77,7 +77,7 @@
                  </div>
                  <div class="row">
                     <div class="col-10">
-                    <img class ="img-fluid" src="/pictures/rupert372.JPG" title="Jamaica -  Horse Riding(2018)">
+                    <img class ="img-fluid" src="pictures/rupert372.JPG" title="Jamaica -  Horse Riding(2018)">
                 </div> 
              </div>
             </div>                   
@@ -91,7 +91,7 @@
                      </div>
                      <div class="row">
                      <div class="col-10">
-                        <img class ="img-fluid" src="/pictures/budapest.JPG" title="Budapest - Rooftop bar(2016)">
+                        <img class ="img-fluid" src="pictures/budapest.JPG" title="Budapest - Rooftop bar(2016)">
                     </div> 
                  </div>
             </div>
@@ -102,7 +102,7 @@
                  </div>
                  <div class="row">
                     <div class="col-10">
-                    <img class ="img-fluid" src="/pictures/ibiza.JPG" title="Ibiza - Birthday(2016)">
+                    <img class ="img-fluid" src="pictures/ibiza.JPG" title="Ibiza - Birthday(2016)">
                 </div> 
              </div>
             </div>
@@ -113,7 +113,7 @@
                  </div>
                  <div class="row">
                     <div class="col-10">
-                    <img class ="img-fluid" src="/pictures/barc.JPG" title="Barcelona - Cathedral(2016)">
+                    <img class ="img-fluid" src="pictures/barc.JPG" title="Barcelona - Cathedral(2016)">
                 </div> 
              </div>
             </div>
@@ -125,7 +125,7 @@
                  </div>
                  <div class="row">
                     <div class="col-10">
-                    <img class ="img-fluid" src="/pictures/greece.jpg" title="Greece -  boat swing (2016)">
+                    <img class ="img-fluid" src="pictures/greece.jpg" title="Greece -  boat swing (2016)">
                 </div> 
              </div>
             </div>          
