seperated the files, everything is working

--- a/content/blogIndex.html
+++ b/content/blogIndex.html
@@ -1,14 +1,4 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-        <link rel="stylesheet" href="styling/cssMycite.css">
-         <link rel="stylesheet" href="styling/travels.css">
-        <title>World's Connected</title>
-    </head>
-    <body>
+ <body>
          <div class = "container">
             <header>
                  <div class = "row">
@@ -27,8 +17,8 @@
                     </div>
                      <div class="nav">
                          <div class="row">
-                              <a href="myCite.html">Home</a>
-                              <a href="project.html">Relevance</a>
+                              <a href="index.html">Home</a>
+                              <a href="relevantIndex.html">Relevance</a>
 <!--                              <a href="offical/contact.html">Contact</a>-->
                         </div>
                 </div>
@@ -132,4 +122,3 @@
             </div>
         </div>
     </body>
-</html>
