format rendered properly

--- a/content/relevantIndex.html
+++ b/content/relevantIndex.html
@@ -1,7 +1,7 @@
-      <div class="nav">
+<div class="nav">
         <div class="row">
           <a href="index.html">Home</a>
-          <a href="blog.html">Travel</a>
+          <a href="blogIndex.html">Travel</a>
         </div>
       </div>
     </header>
