--- a/content/blogIndex.html
+++ b/content/blogIndex.html
@@ -6,7 +6,7 @@
                 </div>
             </div>
         </header>
-        <div class="title-show"><strong><u>Adventures!</u></strong></div>
+        <div class="title-show"><strong><u>Adventures!</u></strong>
         <br>
         <div class="row">
             <div class="mex">
@@ -14,7 +14,7 @@
                     <h3><strong>Mexico</strong></h3>
                 </div>
                 <div class="row">
-                    <div class="col-10">
+                    <div class="col-5">
                         <img class ="img-fluid" src="pictures/mexico.jpg" title="Mexico - Spontaneous Trip(2018)">
                     </div> 
                 </div>
@@ -24,7 +24,7 @@
                     <h3><strong>Prague</strong></h3>
                 </div>
                 <div class="row">
-                    <div class="col-10">
+                    <div class="col-5">
                         <img class ="img-fluid" src="pictures/prague.jpg" title="Prague - Escape Room(2016)">
                     </div> 
                 </div>
@@ -34,7 +34,7 @@
                     <h3><strong>Cuba</strong></h3>
                 </div>
                 <div class="row">
-                    <div class="col-10">
+                    <div class="col-5">
                         <img class ="img-fluid" src="pictures/cuba.JPG" title="Cuba - Old School(2018)">
                     </div>
                 </div>
@@ -44,7 +44,7 @@
                     <h3><strong>Jamaica</strong></h3>
                 </div>
                 <div class="row">
-                    <div class="col-10">
+                    <div class="col-5">
                         <img class ="img-fluid" src="pictures/rupert372.JPG" title="Jamaica -  Horse Riding(2018)">
                     </div> 
                 </div>
@@ -56,7 +56,7 @@
                     <h3><strong>Budapest</strong></h3>
                 </div>
                 <div class="row">
-                    <div class="col-10">
+                    <div class="col-5">
                         <img class ="img-fluid" src="pictures/budapest.JPG" title="Budapest - Rooftop bar(2016)">
                     </div> 
                 </div>
@@ -66,7 +66,7 @@
                     <h3><strong>Ibiza</strong></h3>
                 </div>
                 <div class="row">
-                    <div class="col-10">
+                    <div class="col-5">
                         <img class ="img-fluid" src="pictures/ibiza.JPG" title="Ibiza - Birthday(2016)">
                     </div> 
                 </div>
@@ -76,7 +76,7 @@
                     <h3><strong>Barcelona</strong></h3>
                 </div>
                 <div class="row">
-                    <div class="col-10">
+                    <div class="col-5">
                         <img class ="img-fluid" src="pictures/barc.JPG" title="Barcelona - Cathedral(2016)">
                     </div> 
                 </div>
@@ -86,9 +86,10 @@
                     <h3><strong>Greece</strong></h3>
                 </div>
                 <div class="row">
-                    <div class="col-10">
+                    <div class="col-5">
                         <img class ="img-fluid" src="pictures/greece.jpg" title="Greece -  boat swing (2016)">
                     </div> 
                 </div>
-            </div>          
-        </div>
+            </div>  
+        </div>        
+    </div>
